<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.Loja.LojaActivity">

    <LinearLayout
            android:orientation="vertical"
            android:weightSum="10"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <RelativeLayout
                android:layout_weight="10"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/bg"
                android:backgroundTint="#80FFFFFF"
                android:backgroundTintMode="src_over"

        >

            <TextView
                    android:id="@+id/tituloLoja"
                    android:text="@string/tituloloja"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="50sp"
                    android:textColor="@color/primaryDarkColor"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/kavoon"

            />

        </RelativeLayout>
        <RelativeLayout
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="450dp">

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

            </androidx.recyclerview.widget.RecyclerView>

        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@color/primaryDarkColor"
        >
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="right">

                <TextView
                        android:text="@string/saldo"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_marginLeft="10dp"
                />
                <TextView
                        android:text="@string/totalCredit"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_saldo"
                        android:textAlignment="center"
                        android:focusable="true"
                        android:textStyle="bold"
                        android:padding="5dp"/>

            </LinearLayout>


        </RelativeLayout>





    </LinearLayout>



</RelativeLayout>